# anyvar

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .hgtags  .pre-commit-config.yaml  .service_info_example.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README-async.md  README-new.MD  README-snowflake.md  README.md  README.rst  compose-jennifer.yaml  compose.yaml  docker-build  docker-compose.yml  duckdb-notes.md  logging.yaml  pyproject.toml  pyrightconfig.json  setup.cfg  startup.sh  testing-duckdb.ipynb
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: requirement.yaml
.github/workflows/: checks.yaml  ci.yaml  python-package.yml  release.yml
demo/: demo-input.vcf  demo_vcf.ipynb  out.vcf  vcf_demo.ipynb
deploy/: docker-compose.yml
deploy/dynamodb/: Dockerfile
deploy/postgres/: Dockerfile  uta_setup.sh
deploy/variation-normalizer/: Dockerfile  get_seqrepo.sh
docker/dynamodb/: Dockerfile
docker/uta/: Dockerfile
docker/variation-normalizer/: Dockerfile  get_seqrepo.sh
docs/: .justfile  async.md  docker.md  example-variation-data.md  logging.md  postgres.md  seqrepo.md  snowflake.md  sql.md  uta.md
docs/source/: api.rst  async.rst  changelog.rst  conf.py  contributing.rst  example-config.rst  features.rst  getting_started.rst  help.rst  index.rst  install.rst  logging.rst  project-requirements.rst  quick-start.rst  roadmap.rst  stack.rst  storage.rst  support.rst  usage.rst
docs/source/_templates/: module_summary.rst  module_summary_no_inherit.rst
docs/source/api/: index.rst
docs/source/api/api/: anyvar.anyvar.rst  anyvar.core.metadata.rst  anyvar.core.objects.rst  anyvar.core.string.rst  (+9 more)
docs/source/configuration/: async.rst  authentication.rst  docker_compose.rst  dotenv_example.rst  general.rst  index.rst  logging.rst  service_info.rst  snowflake.rst  storage.rst
docs/source/dependencies/: index.rst  seqrepo.rst  uta.rst
docs/source/getting_started/: docker_compose.rst  index.rst  manual_setup.rst
docs/source/storage/: index.rst  postgresql.rst  snowflake.rst  sql.rst
docs/source/usage/: examples.rst  index.rst  python.rst  rest_api.rst  rest_service.rst
scripts/: gregor_pilot.py  vcf_benchmark.py
src/anyvar/: __init__.py  __main__.py  allele.py  anyvar.py  app.py  dataproxy.py  enums.py  globals.py  info.py  locations.py  manager.py  openapi.yaml  position.py  positions.py  storage.py  translator.py  uidoc.py  utils.py  variation.py  webapp.py  webapp.yaml
src/anyvar/_data/: webapp.yaml
src/anyvar/core/: __init__.py  categorical_variants.py  metadata.py  objects.py  string.py
src/anyvar/extras/: __init__.py  clinvarparser.py  vcf.py
src/anyvar/features/: __init__.py  genes.py
src/anyvar/mapping/: __init__.py  liftover.py  projection.py
src/anyvar/queueing/: __init__.py  celery_worker.py
src/anyvar/restapi/: __init__.py  async_utils.py  auth.py  categorical_variants_router.py  dependencies.py  globals.py  main.py  mappings.py  meta_router.py  objects_router.py  schema.py  search_router.py  translate_router.py  translation_router.py  uidoc.py  utils.py  variations_router.py  vcf.py  vcf_router.py  webapp.py
src/anyvar/routes/: allele.py  info.py  locations.py  text.py  variation.py  variationset.py
src/anyvar/storage/: README-pg.md  __init__.py  abc.py  base.py  base_storage.py  db.py  duckdb.py  init.sql  mapper_registry.py  mappers.py  memory.py  no_db.py  orm.py  pg_utility.py  postgres.py  postgres_init.sql  postgres_init_test.sql  postgres_test_init.sql  redis.py  redisobjectstore.py  shelf.py  snowflake.py  sql_storage.py  sqlalchemy.py
src/anyvar/translate/: __init__.py  base.py  register.py  translate.py  variation_normalizer.py  vrs_python.py
src/anyvar/utils/: __init__.py  digest.py  formats.py  funcs.py  functions.py  general.py  liftover_utils.py  orderedenum.py  types.py  vrs_object_utils.py
src/anyvar/vcf/: __init__.py  ingest.py
src/variationsandbox/: __main__.py  _backend.py  app.py  info.py  location.py  openapi.yaml  variation.py
tests/: conftest.py  test_allele.py  test_annotation_middleware.py  test_find.py  test_general.py  test_input_payload_annotation.py  test_lifespan.py  test_liftover.py  test_location.py  test_positions.py  test_search.py  test_sequence.py  test_utils.py  test_variation.py  test_vcf.py
tests/data/: alleles.json  liftover_variants.py  sequence.json  text_alleles.json  variations.json
tests/integration/: conftest.py  test_search.py
tests/integration/crud/: test_annotation.py  test_location.py  test_mappings.py  test_variation.py
tests/integration/restapi/: conftest.py  test_catvars_router.py  test_search_router.py  test_translation_router.py
tests/integration/vcf/: test_annotate_vcf.py  test_ingest_vcf.py
tests/storage/: sqlalchemy_mocks.py  test_duckdb.py  test_duckdb_annotation.py  test_no_db.py  test_postgres.py  test_postgres_annotation.py  test_snowflake.py  test_sql_storage_mapping.py  test_storage_implementation.py  test_storage_mapping.py
tests/unit/: test_anyvar.py  test_catvars.py  test_restapi.py
tests/unit/core/: test_objects.py
tests/unit/extras/: test_liftover.py
tests/unit/features/: test_genes.py
tests/unit/mapping/: test_liftover.py  test_projection.py
tests/unit/restapi/: test_async_utils.py  test_auth.py  test_main.py  test_meta_router.py  test_objects_router.py  test_schema.py  test_variations_router.py
tests/unit/storage/: conftest.py  storage_test_funcs.py  test_duckdb.py  test_no_db.py  test_postgres.py  test_snowflake.py  test_snowflake_dyntable.py
tests/unit/translate/: test_register.py  test_vrs_python.py
tests/vcf/: test_annotate_vcf.py  test_ingest_vcf.py
variationregistry/restservice/: __main__.py  openapi.yaml
variationregistry/restservice/restapi/: variation.py
variationsandbox/: __main__.py  allele.py  variation.py  variationset.py
variationsandbox/_data/openapi/: openapi.yaml
variationsandbox/car/: ca.py  openapi.yaml
variationsandbox/restservice/: __main__.py  openapi.yaml
variationsandbox/storage/: interface.py
variationsandbox/vr/: openapi.yaml  sequence.py  variation.py
(+41 files in other folders)
