[metadata]
name = anyvar
author = Reece Hart
author-email = reece@harts.net
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8

[options]
zip_safe = false
install_requires =
    canonicaljson
    fastapi >= 0.95.0
    uvicorn
    ga4gh.vrs[extras]==0.7.6
    ga4gh.vrsatile.pydantic ~= 0.0.11
    psycopg[binary]
setup_requires =
    setuptools_scm
packages = find:
package_dir =
    = src

[options.package_data]
* =
    _data/*.yaml

# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.extras_require]
dev =
	ruff
        pre-commit
        isort
test =
	pytest
        pytest-cov
        pytest-mock
        httpx


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

[tool:pytest]
addopts = --cov=anyvar --cov-report term-missing
