[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    canonicaljson
    fastapi >= 0.95.0
    python-multipart
    uvicorn
    ga4gh.vrs[extras] ~= 0.8.4
    ga4gh.vrsatile.pydantic ~= 0.0.11
    psycopg[binary]

[options.package_data]
* =
    _data/*.yaml

# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.extras_require]
dev =
    black
    ruff
    pre-commit
    bandit~=1.7
test =
    pytest
    pytest-cov
    pytest-mock
    httpx

[tool:pytest]
addopts = --cov=anyvar --cov-report term-missing
