[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    canonicaljson
    fastapi>=0.95.0
    python-multipart
    uvicorn
    ga4gh.vrs[extras]~=2.0.0a2
    psycopg[binary]
    snowflake-connector-python~=3.4.1

[options.package_data]
* =
    _data/*.yaml

# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.extras_require]
dev =
    black==24.2.0
    ruff>=0.2.2,<1.0.0
    pre-commit
    bandit~=1.7
test =
    pytest
    pytest-cov
    pytest-mock
    httpx

[tool:pytest]
addopts = --cov=anyvar --cov-report term-missing
